Sun Aug 12 01:53:13 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* testing/{option_apcs,option_cpu,option_fpu,option_device,Makefile.in,
	include,tests_pass}: Moved to...
	* unittests/compare: ...here.
	* unittests/reloc: Add simple import/export test case.
	* configure.ac: Update.
	* Makefile.am: Likewise.
	* src/asm.c (ASM_DefineLabel): Give all data labels SYMBOL_DATUM bit.

Sat Aug 11 13:35:48 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (install-minimum): Make sure asasm is fully built (incl.
	decaof and elftoolchain) before installing.
	* docs/AOF-2011: Added.

Fri Aug 10 23:40:16 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	Reorganised asasm, added external links to GCCSDK decaof and
	elftoolchain project.

Sun Jul 29 21:55:48 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (ASASM_VERSION): Simplify.

Sun Jul 29 17:27:06 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (ASASM_VERSION): Deal with svn repository numbers having
	less or more than 4 digits.

Tue Jul 17 01:05:26 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* variables (Var_Define): Simplify (call Symbol_Get instead of
	Symbol_Find + Symbol_Get).

Tue Jul 17 00:49:52 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (ASASM_VERSION): Add.
	* lex.c (Lex_GetBuiltinVariable): Define {ASASM_VERSION} iso {ASASM}.
	* variables.c (Var_PrepareForPhase): Call Var_PredefineVariables
	before each pass.
	(Var_PredefineVariables): Define |asasm$version|.
	(Var_Declare): Rename to Var_Define and clean up as we don't have
	any concept of declare vs define anymore.
	(c_set): No longer set SYMBOL_DEFINED, this should already been set.
	* regression/tests_pass/version.s: Add.
	* regression/tests_pass/variable_define.s: Add.
	* regression/tests_pass/builtinvar_cpu1.s,
	regression/tests_pass/builtinvar_cpu2.s: Remove (superseded by the
	option_cpu tests).

Mon Jul 16 22:25:13 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
