@@ -74,3 +74,5 @@ Symbol table (.symtab) contains 16 entries:
     13: 0000000000000000     0 NOTYPE  GLOBAL DEFAULT  UND Imp31
     14: 0000000000000000     0 NOTYPE  GLOBAL DEFAULT  UND Imp32
     15: 0000000000000000     0 NOTYPE  GLOBAL DEFAULT  UND Imp33
+
+elf checksum: 0x1a70
